--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -20,4 +20,35 @@
   background: #00A0E9;
   padding: 5px 0;
 }
+#components-layout-demo-custom-trigger .trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color .3s;
+}
+
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: #1890ff;
+}
+
+#components-layout-demo-custom-trigger .logo {
+  height: 32px;
+  background: rgba(255,255,255,.2);
+  margin: 16px;
+}
+.logo {
+  height: 32px;
+  background: rgba(255,255,255,.2);
+  margin: 16px;
+}
+.a {
+  display: inline-block;
+  padding: 0 8px;
+  line-height: 36px;
+  font-size: 16px;
+  background: #999;
+  color: #fff;
+  -webkit-tap-highlight-color: transparent;
+}
 
